--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -156,6 +156,21 @@ resources.router.routes.carousel-create.defaults.module = default
 resources.router.routes.carousel-create.defaults.controller = carousel
 resources.router.routes.carousel-create.defaults.action = create
 
+resources.router.routes.carousel-update.route = /carousel/update/:id
+resources.router.routes.carousel-update.defaults.module = default
+resources.router.routes.carousel-update.defaults.controller = carousel
+resources.router.routes.carousel-update.defaults.action = update
+
+resources.router.routes.carousel-delete.route = /carousel/delete/:id
+resources.router.routes.carousel-delete.defaults.module = default
+resources.router.routes.carousel-delete.defaults.controller = carousel
+resources.router.routes.carousel-delete.defaults.action = delete
+
+resources.router.routes.carousel-display.route = /carousel/display/:id
+resources.router.routes.carousel-display.defaults.module = default
+resources.router.routes.carousel-display.defaults.controller = carousel
+resources.router.routes.carousel-display.defaults.action = display
+
 ; contacts
 
 resources.router.routes.contacts.route = /contacts
