--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,12 @@
 # Powered by snenko@gmail.com
+SetEnv APPLICATION_ENV development
+RewriteEngine On
+
+RewriteCond %{REQUEST_FILENAME} -s [OR]
+RewriteCond %{REQUEST_FILENAME} -l [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^.*$ - [NC,L]
+
 DirectoryIndex index.php index.cgi index.html
 ErrorDocument 401 "Unauthorized"
 ErrorDocument 403 "Forbidden"
