--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -95,6 +95,11 @@ resources.router.routes.gallery-delete.defaults.action = delete
 
 ; product
 
+resources.router.routes.product-index.route = /product
+resources.router.routes.product-index.defaults.module = default
+resources.router.routes.product-index.defaults.controller = product
+resources.router.routes.product-index.defaults.action = index
+
 resources.router.routes.product-create.route = /product/create/:gallery
 resources.router.routes.product-create.defaults.module = default
 resources.router.routes.product-create.defaults.controller = product
