--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,10 +27,13 @@ autoloaderNamespaces[] = "Polycast_"
 autoloaderNamespaces[] = "Zellien_"
 
 logs.logPath = APPLICATION_PATH "/../data/logs"
+configs.localConfigPath = APPLICATION_PATH "/configs/summers.ini"
 
 ; ------------
 resources.view.helperPath.Summers_View_Helper = "Summers/View/Helper"
 resources.view.helperPath.Zellien_View_Helper = "Zellien/View/Helper"
+resources.view.helperPath.ZFBootstrap_View_Helper_Navigation_Menu = "ZFBootstrap/View/Helper/Navigation/Menu"
+
 
 ; catalog photos
 uploads.galleryPhotoDir = APPLICATION_PATH "/../public/photos"
@@ -183,6 +186,23 @@ resources.router.routes.contacts.defaults.module = default
 resources.router.routes.contacts.defaults.controller = index
 resources.router.routes.contacts.defaults.action = contacts
 
+;resources.router.routes.contacts.route = /success
+;resources.router.routes.contacts.defaults.module = default
+;resources.router.routes.contacts.defaults.controller = index
+;resources.router.routes.contacts.defaults.action = success
+
+; settings
+
+resources.router.routes.settings.route = /settings
+resources.router.routes.settings.defaults.module = default
+resources.router.routes.settings.defaults.controller = settings
+resources.router.routes.settings.defaults.action = update
+
+; languages
+resources.router.routes.locale.route = /locale/index/:locale
+resources.router.routes.locale.defaults.module = default
+resources.router.routes.locale.defaults.controller = locale
+resources.router.routes.locale.defaults.action = index
 
 [staging : production]
 
