--- a/application/configs/summers.ini
+++ b/application/configs/summers.ini
@@ -1,7 +1,8 @@
 [guest]
 guestEmailAddress = "snenko@gmail.com"
-langDefault = "ru_RU"
+langDefault = "uk_UA"
 
 [admin]
 adminEmailAddress = "snenko@gmail.com"
+titleProducts = ""
 
