--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -208,11 +208,53 @@ resources.router.routes.locale.defaults.module = default
 resources.router.routes.locale.defaults.controller = locale
 resources.router.routes.locale.defaults.action = index
 
-; languages
+; translator
+resources.router.routes.translator.route = /translator
+resources.router.routes.translator.defaults.module = default
+resources.router.routes.translator.defaults.controller = translator
+resources.router.routes.translator.defaults.action = index
+
 resources.router.routes.translator-update.route = /translator/update/:label
 resources.router.routes.translator-update.defaults.module = default
 resources.router.routes.translator-update.defaults.controller = translator
 resources.router.routes.translator-update.defaults.action = update
+
+resources.router.routes.translator-create.route = /translator/create
+resources.router.routes.translator-create.defaults.module = default
+resources.router.routes.translator-create.defaults.controller = translator
+resources.router.routes.translator-create.defaults.action = create
+
+resources.router.routes.translator-delete.route = /translator/delete/:label
+resources.router.routes.translator-delete.defaults.module = default
+resources.router.routes.translator-delete.defaults.controller = translator
+resources.router.routes.translator-delete.defaults.action = delete
+
+; pages
+
+resources.router.routes.page.route = /page
+resources.router.routes.page.defaults.module = default
+resources.router.routes.page.defaults.controller = page
+resources.router.routes.page.defaults.action = index
+
+resources.router.routes.page-create.route = /page/create
+resources.router.routes.page-create.defaults.module = default
+resources.router.routes.page-create.defaults.controller = page
+resources.router.routes.page-create.defaults.action = create
+
+resources.router.routes.page-update.route = /page/update/:id
+resources.router.routes.page-update.defaults.module = default
+resources.router.routes.page-update.defaults.controller = page
+resources.router.routes.page-update.defaults.action = update
+
+resources.router.routes.page-delete.route = /page/delete/:id
+resources.router.routes.page-delete.defaults.module = default
+resources.router.routes.page-delete.defaults.controller = page
+resources.router.routes.page-delete.defaults.action = delete
+
+resources.router.routes.page-display.route = /page/display/:id
+resources.router.routes.page-display.defaults.module = default
+resources.router.routes.page-display.defaults.controller = page
+resources.router.routes.page-display.defaults.action = display
 
 
 [staging : production]
